# g

./: .gitignore  Cargo.toml  README.md
docs/: .wing
docs/content/: design-drafts.md  development.md  index.md
docs/static/: index.css
docs/templates/: index.html
gc/: Cargo.toml
gc/src/: main.rs
gcli/: Cargo.toml
gcli/src/: lib.rs  main.rs  new.rs
gcli/static/: default.toml  index.html
src/: error.rs  lib.pest  lib.rs  parse.rs
